ALPHA Server Manager Logic.